# xmlabs-python

./: README.md  pyproject.toml
example/aws_lambda/: app.py
example/aws_lambda_fullapp/: pyproject.toml  settings.toml
example/aws_lambda_fullapp/tests/: test_aws_lambda_fullapp.py
tests/: test_aws_lambda_integration.py  test_aws_lambda_settings.py  test_dynaconf.py
xmlabs/: __init__.py
xmlabs/aws_lambda/: __init__.py  config.py  env.py  handler.py
xmlabs/dynaconf/: aws_ec2_userdata_loader.py  aws_ssm_loader.py
