[tool.poetry]
name = "xmlabs"
version = "0.1.0"
description = ""
authors = ["Markus Jonsson <reiktar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
dynaconf = "^3.0.0"
boto3 = "^1.14.35"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.tox]
legacy_tox_ini  = """
[tox]
isolated_build = True
#envlist = py35, py36, py37, py38
envlist = py38
[testenv]
deps = pytest

whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

